--- a/面经/0面试过程.md
+++ b/面经/0面试过程.md
@@ -1,16 +1,32 @@
 # 2022.03.04
 
-## 开域
+## 开域 —— `Go开发实习生`
 
+
+### 1. 一面技术面(`半个小时左右`)
 1. 自我介绍
 2. 他开始介绍业务
 3. 问了问自己做的项目，也没细问，后来又介绍自己的业务
 ……
-4. 感觉主管说的比我说的多
-Over
+4. 感觉主管说的比我说的多，我也就没说什么了
 
 
-## 望石智慧
+
+### 2. 二面HR面
+
+就是打了个电话面的
+1. 问我个人情况
+2. 之前实习谁带我
+3. 公司怎么样，别人怎么评价我
+4. 什么时候能入职
+
+`差不多20来分钟`
+
+<font color="#f29e8e">Over</font>
+
+## 望石智慧 —— `Python开发实习生`
+
+### 1. 一面技术面(`差不多40分钟`)
 
 1. 自我介绍
 2. 问了问关于算法与开发上有什么问题（详细忘了怎么问的了，算是闲聊...）
@@ -24,6 +40,8 @@ Over
     2. 采集拼接，然后扯了扯相关的
         - 后端怎么实现，简单说了说，然后主管说了说自己的看法
     3. 说一说你的图像配准的工作
+        - 数据是抓的还是怎么获得的
+        - 怎么做的配准
 3. 问了我GoLang，怎么看的？
     - 我说GoLang作为一门新兴的语言，比较喜欢的地方在于它的channel（通道）机制，相当于很简单的实现了一个消息队列
 4. GoLang应用场景
@@ -31,4 +49,22 @@ Over
 5. 有没有看过GoLang的一些底层框架，比如docker，k8s，etcd等？
     - 我也没看过，但是都了解过一些，实话实说就行了
 6. 说了业务上的两个方面，一个是GoLang的开发，一个是机器学习平台的，看个人倾向，然后闲聊了几个来回
-Over
+
+### 2. 二面技术面(`1个小时`)
+
+1. 自我介绍
+2. 问我配准（简直不能再详细了）
+    - 从数据到网络再到loss
+    - mse和mae区别
+3. 二分类的话怎么输出，用什么公式
+4. 实习经历
+    - 做了什么，用到了什么中间件
+    - 中间件有哪些
+    - 详细底层原理
+5. 说一说python的多线程
+6. 评价一下自己的优势
+7. 有什么问题问我的吗
+
+<font color="#f29e8e">Over</font>
+
+> 从这两场面试中觉得以后应用离不开GoLang，第一场面Go，主管说业务中还是Python多，第二场面Python，说也有Go。两场都没有细问编程中的事，部门都是偏效益，不加班，可转正。
