--- a/面经/0面试过程.md
+++ b/面经/0面试过程.md
@@ -1,8 +1,8 @@
 # 2022.03.04
 
-## 开域 —— `Go开发实习生`
+## 开域集团
 
-
+`岗位: Go开发实习生`
 ### 1. 一面技术面(`半个小时左右`)
 1. 自我介绍
 2. 他开始介绍业务
@@ -17,15 +17,17 @@
 就是打了个电话面的
 1. 问我个人情况
 2. 之前实习谁带我
-3. 公司怎么样，别人怎么评价我
+3. 实习的公司怎么样，做什么，别人怎么评价我
 4. 什么时候能入职
 
 `差不多20来分钟`
 
 <font color="#f29e8e">Over</font>
 
-## 望石智慧 —— `Python开发实习生`
+## 望石智慧 
 
+
+`岗位: Python开发实习生`
 ### 1. 一面技术面(`差不多40分钟`)
 
 1. 自我介绍
@@ -38,7 +40,7 @@
         - 如果没有获取到怎么解决（把爬虫流程说一下就ok，因为排查问题就是这么排查..）
         - 有没有涉及到前端（没有，直接说同事用js写的）
     2. 采集拼接，然后扯了扯相关的
-        - 后端怎么实现，简单说了说，然后主管说了说自己的看法
+        - 后端怎么实现，简单说了说，然后面试官说了说自己的看法
     3. 说一说你的图像配准的工作
         - 数据是抓的还是怎么获得的
         - 怎么做的配准
@@ -55,14 +57,21 @@
 1. 自我介绍
 2. 问我配准（简直不能再详细了）
     - 从数据到网络再到loss
-    - mse和mae区别
-3. 二分类的话怎么输出，用什么公式
+        - 数据怎么得到的
+        - 网络是怎么搭建的，为什么这么搭建
+    - mse和mae区别(我说了一下公式和适用的数据)
+    - 为什么有这种区别（我说loss曲线，具体的我说想不起来了）
+3. 二分类的话怎么输出
+    - 用什么公式（我说的e的指数次）
+    - 他说用画图工具写一下，然后我写了一下，后来又问x，y分别代表什么
 4. 实习经历
     - 做了什么，用到了什么中间件
-    - 中间件有哪些
-    - 详细底层原理
-5. 说一说python的多线程
-6. 评价一下自己的优势
+    - 由于我说了redis和kafk还有ES，所以问了我这两个的底层原理（redis是hash树，kafka我直接说不知道）
+        - kafka你用到的接口是什么（一个消费者，一个生产者）
+        - redis用到的接口呢（就是redis库）
+    - 问为什么需要redis（我说由于数据量特别大，并发的运行开销也是很大的，如果只用mysql频繁的读写io会极大的降低速度，因此需要redis做缓存，这样能够提高并行效率）
+5. 说一说python的多线程（说了说GIL锁机制）
+6. 评价一下自己的优势（扯）
 7. 有什么问题问我的吗
 
 <font color="#f29e8e">Over</font>
