--- a/面经/容器.md
+++ b/面经/容器.md
@@ -27,55 +27,100 @@
 是docker核心引擎，由 `docker daemon、rest api、docker client` 组成
 
 
-### 2.2 常用命令
+### 2.2 镜像
 
-- 镜像
-    - 镜像作用
-        - 镜像: 负责存储和分发应用程序
-    - 镜像操作
-        - 运行镜像 `docker run image_name`
-        - 拉取镜像 `docker pull image_name`
-        - 构造镜像 `docker build -t image_name`
-        - 查看镜像分层 `docker history image_id`
-        - 查看镜像列表 `docker images` / `docker image ls`
-- 容器
-    - 容器作用
-        - 容器: 负责运行应用程序
-    - 容器操作
-        - 查看当前正在运行的容器 `docker container ls`
-        - 查看容器 
-            - 查看所有容器 `docker container ls -a`
-            - 查看容器详情 `docker container inspect container_id/container_name`
-            - 查看容器进程 `docker container top container_id/container_name`
-            - 查看容器统计信息 `docker container stats container_id/container_name`
-        - 创建容器 `docker create (-it) container_name`
-            - 如果要运行容器，需要在创建的时候加上 `-it`
-        - 启动容器 `docker run container_name`
-            - 启动一个或多个已停止的容器
-        - 创建的同时启动容器 `docker run -it container_name`
-            - 相当于 `docker create` + `docker start`
-            - 内部原理:
-                - 检查本地是否存在指定的镜像，如果不存在，从公有仓库中下载。
-                - 利用镜像创建一个容器，启动容器
-                - 分配一个文件系统给容器，在只读的镜像层外面挂载一层可读写层
-                - 从宿主机配置的网桥接口中桥接一个虚拟接口到容器中
-                - 给容器配置IP
-                - 执行应用
-                - 如果应用程序可终止，执行完毕后容器被自动终止
-        - 停止容器 `docker pause/unpause` / `docker stop`
-        - 进入容器
-            - 在使用 `docker run -d` 的时候，会从后台运行容器，用户没有办法看到容器中的信息，也不能进行操作
-            - attach 
-                - 连上一个正在运行的容器  `docker attach container_name`
-                - 缺陷: 当多个容器attach上同一个容器时，所有容器会同步显示。当其中一个容器因为命令被阻塞，其他容器也无法执行操作
-            - exec `docker exec -it container_name(container_id) /bin/bash`
-                - 在运行的容器内直接执行任意命令
-                - `/bin/bash` 是为了打开新的终端
-        - 删除容器 `docker rm container_id/container_name`
-        - 容器的导入导出
-            - 导入 `docker import -m "image info" file.tar image_name:image_tar`
-                - 将一个 `tar` 文件导入变成 `镜像`
-            - 导出 `docker export -o test_export_mysql.tar container_name`
-                - 导出已创建好的容器到一个 `tar` 文件，不管这个容器是否处于运行状态都可以
-        - 杀死容器 `docker rm container_id/container_name`
-        - 清理容器 `docker container prune`
+- 镜像作用
+    - 镜像: 负责存储和分发应用程序
+- 镜像操作
+    - 运行镜像 `docker run image_name`
+    - 拉取镜像 `docker pull image_name`
+    - 构造镜像 `docker build -t image_name`
+    - 查看镜像分层 `docker history image_id`
+    - 查看镜像列表 `docker images` / `docker image ls`
+### 2.3 容器
+- 容器作用
+    - 容器: 负责运行应用程序
+- 容器操作
+    - 查看当前正在运行的容器 `docker container ls`
+    - 查看容器 
+        - 查看所有容器 `docker container ls -a`
+        - 查看容器详情 `docker container inspect container_id/container_name`
+        - 查看容器进程 `docker container top container_id/container_name`
+        - 查看容器统计信息 `docker container stats container_id/container_name`
+    - 创建容器 `docker create (-it) container_name`
+        - 如果要运行容器，需要在创建的时候加上 `-it`
+    - 启动容器 `docker run container_name`
+        - 启动一个或多个已停止的容器
+    - 创建的同时启动容器 `docker run -it container_name`
+        - 相当于 `docker create` + `docker start`
+        - 内部原理:
+            - 检查本地是否存在指定的镜像，如果不存在，从公有仓库中下载。
+            - 利用镜像创建一个容器，启动容器
+            - 分配一个文件系统给容器，在只读的镜像层外面挂载一层可读写层
+            - 从宿主机配置的网桥接口中桥接一个虚拟接口到容器中
+            - 给容器配置IP
+            - 执行应用
+            - 如果应用程序可终止，执行完毕后容器被自动终止
+    - 停止容器 `docker pause/unpause` / `docker stop`
+    - 进入容器
+        - 在使用 `docker run -d` 的时候，会从后台运行容器，用户没有办法看到容器中的信息，也不能进行操作
+        - attach 
+            - 连上一个正在运行的容器  `docker attach container_name`
+            - 缺陷: 当多个容器attach上同一个容器时，所有容器会同步显示。当其中一个容器因为命令被阻塞，其他容器也无法执行操作
+        - exec `docker exec -it container_name(container_id) /bin/bash`
+            - 在运行的容器内直接执行任意命令
+            - `/bin/bash` 是为了打开新的终端
+    - 删除容器 `docker rm container_id/container_name`
+    - 容器的导入导出
+        - 导入 `docker import -m "image info" file.tar image_name:image_tar`
+            - 将一个 `tar` 文件导入变成 `镜像`
+        - 导出 `docker export -o test_export_mysql.tar container_name`
+            - 导出已创建好的容器到一个 `tar` 文件，不管这个容器是否处于运行状态都可以
+    - 杀死容器 `docker rm container_id/container_name`
+    - 清理容器 `docker container prune`
+
+### 2.4 数据卷
+
+概述: 大多数情况下，使用docker容器的时候会产生一系列的数据文件，而这些数据文件在我们关闭的docker容器的时候会消失。有些时候我们希望这些数据可以保存，就可以通过数据卷实现。
+
+数据卷(data volumes): 一个可以供容器以及物理机共同使用的目录，它将主机的操作系统目录直接遇到容器中，类似于mount
+
+- 特点
+    - 容器之前，或者容器与宿主机可以共享数据
+    - 数据卷中的更改可以直接生效
+    - 数据卷的更改不会包含到镜像的更新中
+    - 数据卷的生命周期一直持续到没有容器使用它为止
+
+- 命令 `docker volume COMMAND`
+    - 创建数据卷 `docker volume create -[d|t] volume_name`
+        - 创建后仅仅是一个目录，需要绑定容器
+    - 详情 `docker volume inspect volume_name`
+
+- 绑定数据卷
+    - 除了使用volume命令管理，还可以在创建容器的时候将本机本地的任意路径挂在到容器内作为数据卷
+    - `docker container run --mount`
+    - `--mount`支持三种类型的数据卷
+        - `volume:` 普通数据卷
+        - `bind:` 绑定数据卷，映射到主机的指定路径下
+        - `tmpfs:` 临时数据卷，只存在于内存中
+    - 实例，创建一个web容器，创建一个数据卷挂载到/opy/webapp目录
+    ```sh
+    docker run -d -P --name web --mount type=bind,source=/webapp,destination=/opt/webapp/training/webapp ubuntu /bin/bash 
+    -P: publish-all docker会映射一个49000~49900的端口到内部容器开放的网络端口
+    ```
+    - 本地目录的路径必须是绝对路径，容器内的路径可以是相对路径
+    - docker 挂在数据卷的默认权限是读写(rw)，可以通过 `:ro` 改成只读
+
+- 数据卷容器
+    <font color="red">暂时略过</font>
+
+
+## 3. dockerfile
+
+dockerfile是用来构建镜像的文件
+
+- 构建镜像的基本步骤
+    - 编写Dockerfile
+    - 通过Dockerfile构建镜像
+    - 通过镜像产生容器
+
