--- a/面经/容器.md
+++ b/面经/容器.md
@@ -1,4 +1,4 @@
-# 容器技术
+# a. Docker
 
 ## 1. 基本概念
 
@@ -10,7 +10,7 @@
 - VM 虚拟机
 - APP 应用程序
 
-## 1.2 容器
+### 1.2 容器
 
 虚拟是一整套操作系统，其中包括有内核，运行环境，系统环境，运行的应用
 容器是包含了一个（或一组）独立运行的应用，以及运行这些应用所必须的运行环境
@@ -115,12 +115,77 @@
     <font color="red">暂时略过</font>
 
 
-## 3. dockerfile
+### 2.5 Dockerfile
 
-dockerfile是用来构建镜像的文件
+`Dockerfile` 是用来构建镜像的文件
 
 - 构建镜像的基本步骤
     - 编写Dockerfile
     - 通过Dockerfile构建镜像
     - 通过镜像产生容器
 
+
+#### 2.5.1 操作
+
+#### 2.5.2 ...
+
+### 2.6 网络
+
+#### 2.6.1 常用网络连接方式
+
+- NAT
+- host-only
+- bridge
+
+#### 2.6.2 网络配置
+
+docker 提供了5种容器网络模式
+- none:
+- macvlan
+    ```sh
+    docker network create 
+    -d macvlan  网络驱动
+    --subnet=172.16.86.0/24  子网
+    --gateway=172.16.86.1  网关
+    -o parent=eno16777736  父网络接口
+    pub_net  网络接口名称
+    ```
+- overlay
+- bridge
+- host
+
+#### 2.6.3 网络解决方案
+
+--- 
+
+# b. K8S(kubernetes)
+
+## 1. 基本概念
+
+### 1.1 背景
+
+- 思考问题
+    - 容器扩展问题
+    - 容器之间分担负载，如何计算最佳硬件利用率
+    - 如何在不影响内容的情况下进行更新，如果需要该如何回退到可工作的版本
+- Borg: 大规模集群管理系统，目的是实现资源管理的自动化，以及跨多个数据中心的资源利用率最大化
+
+#### 什么是k8s
+
+简单来说，k8s就是一款容器编排工具，它能够帮助我们实现容器的调度管理，资源分配，自动更新部署实现等工作
+
+#### 为什么要用k8s
+
+- 可移植: 支持公有云，私有云，混合云，多重云
+- 可扩展: 模块化，插件化，可挂载，可组合
+- 自动化: 自动部署，自动重启，自动复制，自动伸缩/扩展
+
+### k8s 集群组件
+
+- 自动装箱:
+- 自我修复（自愈）:
+- 水平扩展
+- 服务发现和负载均衡
+- 自动发布和回滚
+- 密钥和配置管理
+- 存储排编
