--- a/面经/排序算法.md
+++ b/面经/排序算法.md
@@ -186,7 +186,7 @@ func sortArray(nums []int) []int {
 
 - Python 版
 ```py
-def insertion_sort(nums):
+def insertSort(nums):
     n = len(nums)
     for i in range(1, n):
         while i > 0 and nums[i - 1] > nums[i]:
@@ -214,3 +214,286 @@ func sortArray(nums []int) []int {
 ```
 
 ## 2.5 希尔排序 (Shell Sort)
+
+非稳定排序，内排序
+希尔排序的时间复杂度和增量序列是相关的
+
+<div align="center"><img src="./assets/希尔排序.gif" width="80%"></div>
+
+- Python 版
+```py
+def shellSort(nums):
+    n = len(nums)
+    gap = n // 2
+    while gap:
+        for i in range(gap, n):
+            while i - gap >= 0 and nums[i - gap] > nums[i]:
+                nums[i - gap], nums[i] = nums[i], nums[i - gap]
+                i -= gap
+        gap //= 2
+    return nums
+```
+
+- Golang 版
+```go
+func sortArray(nums []int) []int {
+    // 希尔排序，比较交换，不稳定算法，时间O(nlog2n)最坏O(n^2), 空间O(1)
+    // 改进插入算法
+    // 每一轮按照间隔插入排序，间隔依次减小，最后一次一定是1
+    /*
+    主要思想：
+    设增量序列个数为k，则进行k轮排序。每一轮中，
+    按照某个增量将数据分割成较小的若干组，
+    每一组内部进行插入排序；各组排序完毕后，
+    减小增量，进行下一轮的内部排序。
+    */
+    gap := len(nums)/2
+    for gap > 0 {
+        for i:=gap;i<len(nums);i++ {
+            j := i
+            for j-gap >= 0 && nums[j-gap] > nums[j] {
+                nums[j-gap], nums[j] = nums[j], nums[j-gap]
+                j -= gap
+            }
+        }
+        gap /= 2
+    }
+    return nums
+}
+```
+
+## 2.6 归并排序 (Merge Sort)
+
+稳定排序，外排序（占用额外内存），时间复杂度 $O(nlogn)$
+
+<div align="center"><img src="./assets/归并排序.gif" width="80%"></div>
+
+- Python 版
+```py
+def merge_sort(nums):
+    if len(nums) <= 1:
+        return nums
+    mid = len(nums) // 2
+    # 分
+    left = merge_sort(nums[:mid])
+    right = merge_sort(nums[mid:])
+    # 合并
+    return merge(left, right)
+
+def merge(left, right):
+    res = []
+    i = 0
+    j = 0
+    while i < len(left) and j < len(right):
+        if left[i] <= right[j]:
+            res.append(left[i])
+            i += 1
+        else:
+            res.append(right[j])
+            j += 1
+    res += left[i:]
+    res += right[j:]
+    return res
+```
+
+- Golang 版
+```go
+// 递归实现归并算法
+func sortArray(nums []int) []int {
+    // 归并排序，基于比较，稳定算法，时间O(nlogn)，空间O(logn) | O(n)
+    // 基于递归的归并-自上而下的合并，另有非递归法的归并(自下而上的合并)
+    // 都需要开辟一个大小为n的数组中转
+    // 将数组分为左右两部分，递归左右两块，最后合并，即归并
+    // 如在一个合并中，将两块部分的元素，遍历取较小值填入结果集
+    // 类似两个有序链表的合并，每次两两合并相邻的两个有序序列，直到整个序列有序
+    merge := func(left, right []int) []int {
+        res := make([]int, len(left)+len(right))
+        var l,r,i int
+        // 通过遍历完成比较填入res中
+        for l < len(left) && r < len(right) {
+            if left[l] <= right[r] {
+                res[i] = left[l]
+                l++
+            } else {
+                res[i] = right[r]
+                r++
+            }
+            i++
+        }
+        // 如果left或者right还有剩余元素，添加到结果集的尾部
+        copy(res[i:], left[l:])
+        copy(res[i+len(left)-l:], right[r:])
+        return res
+    }
+    var sort func(nums []int) []int
+    sort = func(nums []int) []int {
+        if len(nums) <= 1 {
+            return nums
+        }
+        // 拆分递归与合并
+        // 分割点
+        mid := len(nums)/2
+        left := sort(nums[:mid])
+        right := sort(nums[mid:])
+        return merge(left, right)
+    }
+    return sort(nums)
+}
+
+// 非递归实现归并算法
+func sortArray(nums []int) []int {
+    // 归并排序-非递归实现，利用变量，自下而上的方式合并
+    // 时间O(nlogn)，空间O(n)
+    if len(nums) <= 1 {return nums}
+    merge := func(left, right []int) []int {
+        res := make([]int, len(left)+len(right))
+        var l,r,i int
+        // 通过遍历完成比较填入res中
+        for l < len(left) && r < len(right) {
+            if left[l] <= right[r] {
+                res[i] = left[l]
+                l++
+            } else {
+                res[i] = right[r]
+                r++
+            }
+            i++
+        }
+        // 如果left或者right还有剩余元素，添加到结果集的尾部
+        copy(res[i:], left[l:])
+        copy(res[i+len(left)-l:], right[r:])
+        return res
+    }
+    i := 1 //子序列大小初始1
+    res := make([]int, 0)
+    // i控制每次划分的序列长度
+    for i < len(nums) {
+        // j根据i值执行具体的合并
+        j := 0
+        // 按顺序两两合并，j用来定位起始点
+        // 随着序列翻倍，每次两两合并的数组大小也翻倍
+        for j < len(nums) {
+            if j+2*i > len(nums) {
+                res = merge(nums[j:j+i], nums[j+i:])
+            } else {
+                res = merge(nums[j:j+i], nums[j+i:j+2*i])
+            }
+            // 通过index控制每次将合并的数据填入nums中
+            // 重填入的次数和合并及二叉树的高度相关
+            index := j
+            for _, v := range res {
+                nums[index] = v
+                index++
+            }
+            j = j + 2*i
+        }
+        i *= 2
+    }
+    return nums
+}
+```
+
+## 2.7 堆排序
+
+堆排序是利用堆这个数据结构设计的排序算法
+
+算法描述: 
+1. 建堆，从底向上调整堆，使得父亲节点比孩子节点值大，构成大顶堆；
+2. 交换堆顶和最后一个元素，重新调整堆。
+
+
+<div align="center"><img src="./assets/堆排序.gif" width="80%"></div>
+
+- Python 版
+```py
+def heapSort(nums):
+    # 调整堆
+    # 迭代写法
+    def adjust_heap(nums, startpos, endpos):
+        newitem = nums[startpos]
+        pos = startpos
+        childpos = pos * 2 + 1
+        while childpos < endpos:
+            rightpos = childpos + 1
+            if rightpos < endpos and nums[rightpos] >= nums[childpos]:
+                childpos = rightpos
+            if newitem < nums[childpos]:
+                nums[pos] = nums[childpos]
+                pos = childpos
+                childpos = pos * 2 + 1
+            else:
+                break
+        nums[pos] = newitem
+    
+    # 递归写法
+    def adjust_heap(nums, startpos, endpos):
+        pos = startpos
+        chilidpos = pos * 2 + 1
+        if chilidpos < endpos:
+            rightpos = chilidpos + 1
+            if rightpos < endpos and nums[rightpos] > nums[chilidpos]:
+                chilidpos = rightpos
+            if nums[chilidpos] > nums[pos]:
+                nums[pos], nums[chilidpos] = nums[chilidpos], nums[pos]
+                adjust_heap(nums, pos, endpos)
+
+    n = len(nums)
+    # 建堆
+    for i in reversed(range(n // 2)):
+        adjust_heap(nums, i, n)
+    # 调整堆
+    for i in range(n - 1, -1, -1):
+        nums[0], nums[i] = nums[i], nums[0]
+        adjust_heap(nums, 0, i)
+    return nums
+```
+
+- Golang 版
+```go
+func sortArray(nums []int) []int {
+    // 堆排序-大根堆，升序排序，基于比较交换的不稳定算法，时间O(nlogn)，空间O(1)-迭代建堆
+    // 遍历元素时间O(n)，堆化时间O(logn)，开始建堆次数多些，后面次数少 
+    // 主要思路：
+    // 1.建堆，从非叶子节点开始依次堆化，注意逆序，从下往上堆化
+    // 建堆流程：父节点与子节点比较，子节点大则交换父子节点，父节点索引更新为子节点，循环操作
+    // 2.尾部遍历操作，弹出元素，再次堆化
+    // 弹出元素排序流程：从最后节点开始，交换头尾元素，由于弹出，end--，再次对剩余数组元素建堆，循环操作
+    // 建堆函数，堆化
+    var heapify func(nums []int, root, end int)
+    heapify = func(nums []int, root, end int) {
+        // 大顶堆堆化，堆顶值小一直下沉
+        for {
+            // 左孩子节点索引
+            child := root*2 + 1
+            // 越界跳出
+            if child > end {
+                return
+            }
+            // 比较左右孩子，取大值，否则child不用++
+            if child < end && nums[child] <= nums[child+1] {
+                child++
+            }
+            // 如果父节点已经大于左右孩子大值，已堆化
+            if nums[root] > nums[child] {
+                return
+            }
+            // 孩子节点大值上冒
+            nums[root], nums[child] = nums[child], nums[root]
+            // 更新父节点到子节点，继续往下比较，不断下沉
+            root = child
+        }
+    }
+    end := len(nums)-1
+    // 从最后一个非叶子节点开始堆化
+    for i:=end/2;i>=0;i-- {
+        heapify(nums, i, end)
+    }
+    // 依次弹出元素，然后再堆化，相当于依次把最大值放入尾部
+    for i:=end;i>=0;i-- {
+        nums[0], nums[i] = nums[i], nums[0]
+        end--
+        heapify(nums, 0, end)
+    }
+    return nums
+}
+```
