--- a/面经/操作系统.md
+++ b/面经/操作系统.md
@@ -1,5 +1,132 @@
 # 操作系统
 
+
+## 1. 进程调度算法
+
+### 1.1 先来先服务(FCFS, First Come First Served)
+
+- **算法内容:** 调度<font color="red">作业/就绪</font>队列中最先入队者，等待操作完成或阻塞
+- **算法原则:** 按作业/进程到达顺序服务（执行）
+- **调度方式:** 非抢占式调度
+- **适用场景:** 作业/进程调度
+- **优缺点**
+    - <font color="red">有利于CPU繁忙型作业，充分利用CPU资源</font>
+    - 不利于I/O繁忙型作业，操作耗时，其它饥饿
+
+
+<div align="center"><img src="assets/先来先服务.png" width="70%"></div>
+
+
+### 1.2 短作业优先(SJF, Shortest Job First)
+
+- **算法内容:** 所需服务时间最短的<font color="red">作业/就绪</font>优先服务（执行）
+- **算法原则:** 追求最少的平均（带权）周转时间
+- **调度方式:** SJF/SPF非抢占式调度
+- **适用场景:** 作业/进程调度
+- **优缺点**
+    - <font color="red">平均等待/周转时间最少</font>
+    - 长时间周转时间会增加或饥饿
+    - 估计时间不准确，不能保证紧迫任务及时处理
+
+
+<div align="center"><img src="assets/短作业优先.png" width="70%"></div>
+
+
+### 1.3 高响应比优先(HRRN, Highest Response Ratio Next)
+
+- **算法内容:** 所需服务时间最短的<font color="red">作业/就绪</font>优先服务（执行）
+- **算法原则:** 综合考虑作业/进程的等待时间和服务时间
+- **调度方式:** 非抢占式
+- **适用场景:** 作业/进程调度
+- **优缺点**
+    - 响应比 = (等待时间+服务时间) / 服务时间, `>=1`
+    - 只有当前进程放弃执行权（完成/阻塞）时，重新计算所有进程响应比
+    - <font color="red">长作业等待越久响应比越高，更容易获得处理机</font>
+
+
+### 1.4 优先级调度(PSA, Priority-Scheduling Algorithm)
+
+- **算法内容:** 又叫优先权调度，按<font color="red">作业/进程</font>的优先级（紧迫程度）进行调度
+- **算法原则:** 优先级最高（最紧迫）的作业/进程先调度
+- **调度方式:** 抢占/非抢占式（并不能获得及时执行）
+- **适用场景:** 作业/进程调度
+- **优缺点**
+    - 静态/动态优先级
+    - 系统 > 用户; 交互型 > 非交互型; I/O型 > 计算型
+    - 低优先级进程可能会产生"饥饿"
+
+
+
+<div align="center"><img src="assets/优先级调度.png" width="70%"></div>
+
+
+### 1.5 时间片轮转调度(RR, Round-Robin)
+
+- **算法内容:** 按<font color="red">进程</font>到达就绪队列的顺序，轮流分配一个<font color="red">时间片</font>去执行，时间用完则剥夺
+- **算法原则:** 公平、轮流为每个进程服务，进程在一定时间内都能得到响应
+- **调度方式:** 抢占式，由时钟中断确定时间到
+- **适用场景:** 进程调度
+- **优缺点**
+    - <font color="red">公平，响应快，适用于分时系统</font>
+    - 时间片决定因素: 系统相应时间、就绪队列进程数量、系统处理能力
+    - 时间片太大，相当于FCFS；太小，处理机切换频繁，开销增大
+
+
+<div align="center"><img src="assets/RR.png" width="70%"></div>
+
+### 1.6 多级反馈队列调度(MFQ, Multileveled Feedback Queue)
+
+- **算法内容:**
+    - 设置多个按优先级排序的就绪队列
+    - 优先级从高到低，时间片从小到大
+    - 新进程采用队列降级法
+        - 进入第一级队列，按FCFS分时间片
+        - 没有执行完，移到第二级，第三级...
+    - 前面队列不为空不执行后续队列进程
+- **算法原则:** 集前几中算法优点，相当于PSA+RR
+- **调度方式:** 抢占式
+- **适用场景:** 进程调度
+- **优缺点**
+    - 对各类型相对公平；快速响应
+    - 终端型作业用户: 短作业优先
+    -批处理作业用户: 周转时间短
+    - 长批处理作业用户: 在前几个队列部分执行
+
+
+
+<div align="center"><img src="assets/MFQ.png" width="70%"></div>
+
+## 2. 进程协作
+
+### 2.1 进程通信
+
+- 概念: 进程通信即进程间的信息交换
+    - 进程是资源分配的基本单位，各进程内存空间彼此独立
+    - 一个进程不能随意访问其他进程的地址空间
+- 特点: 
+    - 共享存储 (Shared-Memory)
+    - 消息传递 (Message-Passing)
+    - 管道通信 (Pipe)
+
+
+#### 2.1.1  共享存储 (Shared-Memory)
+
+- 基于<font color="red">共享数据结构</font>的通信方式
+    - 多个进程共用某个数据结构（OS提供并控制）
+    - 由用户（程序员）负责同步处理
+    - 低级通信: 可以传递少量数据，效率低
+
+- 基于<font color="red">共享存储区</font>的通信方式
+    - 多个进程共用内存中的一块存储区域
+    - 由进程控制数据的形式和方式
+
+### 2.2 进程同步
+
+
+---
+手动分割线
+
+---
 ## 操作系统对于内存怎么管理的
 
 - 程序重定位
