--- a/面经/操作系统.md
+++ b/面经/操作系统.md
@@ -120,8 +120,166 @@
     - 多个进程共用内存中的一块存储区域
     - 由进程控制数据的形式和方式
 
+    
+<div align="center"><img src="assets/共享存储.png" width="70%"></div>
+
+
+#### 2.1.2  消息传递（Message-Passing）
+- 直接通信: 点到点发送
+    - 发送和接收时指双方进程的ID
+    - 每个进程维护一个消息缓冲队列
+- 间接通信: 广播信箱
+    - 以<font color="red">信箱</font>为媒介，作为中间实体
+    - 发进程将信息发送到信箱，收进程从信箱读取
+    - 可以广播，容易建立双向通信链
+
+<div align="center"><img src="assets/消息传递.png" width="70%"></div>
+
+
+#### 2.1.3  管道通信（Pipe）
+- 管道
+    - 用于连接读/写进程的<font color="red">共享文件，pipe文件</font>
+    - 本质是内存中固定大小的<font color="red">缓冲区</font>
+- <font color="red">半双工</font>通信
+    - 同一时间段只能单向通信，双工通信需要两个管道
+    - 以先进先出（FIFO）方式组织数据传输
+    - 通过系统调用read()/write()函数进行读写操作
+
+<div align="center"><img src="assets/管道通信.png" width="70%"></div>
+
+
+
 ### 2.2 进程同步
 
+#### 2.2.1 基本概念
+
+- <font color="red">协调</font>进程间的<font color="red">相互制约关系</font>，使它们按照预期的方式执行的过程
+- 前提
+    - 进程是并发执行的，进程间存在着相互制约关系
+    - 并发的进程对系统共享资源进行<font color="red">竞争</font>
+    - 进程通信，过程中互相发送的信号称为<font color="red">消息</font>或<font color="red">事件</font>
+- 两种相互制约形式
+    - 简介相互制约关系<font color="red">（互斥）</font>: 进程排他性地访问共享资源
+    - 直接相互制约关系<font color="red">（同步）</font>: 进程间的合作，比如管道通信
+
+#### 2.2.2 实现临界区互斥的基本方法
+
+```sql
+repeat
+    entry section;          // 进入区
+    critical section;       // 临界区
+    exit section;           // 退出区
+    remainder section;      // 剩余区
+until false;
+```
+
+- 访问过程
+    - 1. **进入区:** 尝试进入临界区，成功则<font color="red">加锁（lock）</font>
+    - 2. **临界区:** 访问共享资源
+    - 3. **退出区:** <font color="red">解锁（unlock），</font>唤醒其他<font color="red">阻塞</font>进程
+    - 4. **剩余区:** 其他代码
+- 访问原则
+    - **空闲让进:** 临界区空闲，允许一个进程进入
+    - **忙则等待:** 临界区已有进程，其他进程等待（阻塞状态） 
+    - **有限等待:** 处于等待的进程，等待时间有限
+    - **让权等待:** 等待时应让出CPU执行权，防止"忙等待"
+- 实现方法
+    - 软件实现方法
+        - **单标志法:** <font color="red"> 违背"空闲让进"</font>
+        <div align="center"><img src="assets/单标志法.png" width="70%"></div>
+
+        - **双标志法先检查:** <font color="red">违背"忙则等待"</font>
+        <div align="center"><img src="assets/双标志法先检查.png" width="70%"></div>
+
+        - **双标志法后检查:**  
+            - <font color="red">违背"空闲让进", "有限等待"</font>
+            - 容易出现死锁
+        <div align="center"><img src="assets/双标志法后检查.png" width="70%"></div>
+
+        - **皮特森算法（Peterson's Algorithm）**
+             - <font color="red">违背"让权等待", 会发生"忙等"</font>
+        <div align="center"><img src="assets/皮特森算法.png" width="70%"></div>
+
+    - 硬件实现方法
+        - **中断屏蔽方法:** <font color="red"> 关中断/开中断</font>
+            - 禁止一切中断，CPU执行完临界区之前不会切换
+            - 关中断可能会被滥用
+            - 关中断时间长影响效率
+            - 不适用于多处理机，无法防止其他处理机调度其他进程访问临界区
+            - 只适用于内核进程（该指令运行在内核态）
+
+        <div align="center"><img src="assets/中断处理过程.png" width="70%"></div>
+
+        - <font color="red"> Test-And-Set()TS指令/TSL指令</font>
+            - 读出标志并设置为true，返回旧职，原子操作
+            - 也被称作TSL指令（Test-And-Set-Lock）
+            - 违背"让权等待"，会发生忙等
+
+        <div align="center"><img src="assets/TS指令.png" width="70%"></div>
+
+        - Swap指令（EXCHANGE，XCHG指令）
+            - 交换两个变量的值，<font color="red">原子操作</font>
+            - 违背"让权等待"
+        
+        <div align="center"><img src="assets/SWAP指令.png" width="70%"></div>
+
+
+#### 2.2.3 信号量
+
+- 信号量（Semaphore）机制
+    - PV 操作
+        - P操作: wait原语，进程等待
+        - V操作: singal原语，唤醒等待进程
+    - 整型信号量: 违背"让权等待"，会发生忙等
+    - 记录型信号量: 进程进入阻塞状态，不会忙等
+
+```c
+// 整型信号量, 表示可用资源数
+int S = 1;
+// wait 原语，相当于进入区
+void wait(int S) {
+    while (S <= 0);
+    S = S - 1;
+}
+// signal 原语, 相当于退出区
+void signal(int S) {
+    S = S + 1;
+}
+
+/*
+wait(S);        // 进入区, 申请打印机
+访问共享资源;    // 临界区, 访问打印机
+signal(S);      // 退出区, 释放打印机
+*/
+```
+```c
+typedef struct {
+    int value;              // 剩余资源数量
+    struct process *L;      // 进程等待队列
+} semaphore;
+
+void wait(semaphore S) {    // 申请资源
+    S.value--;
+    if (S.value < 0){
+        // block 原语阻塞进程
+        block(S.L);
+    }
+}
+
+void signal(semaphore S) {  // 释放资源
+    S.value++;
+    if (S.value <= 0){
+        // wakeup 原语唤醒进程
+        wakeup(S.L);
+    }
+}
+
+```
+    
+
+
+#### 2.2.4 管程
+#### 2.2.5 经典同步问题
 
 ---
 手动分割线
