--- a/interview/深度学习常用领域.md
+++ b/interview/深度学习常用领域.md
@@ -889,3 +889,126 @@ EasyEnsemble也是基于Adaboost作为基分类器，就是将多数类样本集
 类别不平衡很极端的情况下（比如少数类只有几十个样本），将分类问题考虑成异常检测（anomaly detection）问题可能会更好
 
 异常检测是通过数据挖掘方法发现与数据集分布不一致的异常数据，也被称为离群点、异常值检测等等。无监督异常检测按其算法思想大致可分为几类：基于聚类的方法、基于统计的方法、基于深度的方法(孤立森林)、基于分类模型（one-class SVM）以及基于神经网络的方法（自编码器AE）等等。
+
+
+### 3.7 GPU加速
+
+
+#### 3.7.1 概述
+
+GPU全名为Graphics Processing Unit，又称视觉处理器、图形显示卡。GPU负责渲染出2D、3D、VR效果，主要专注于计算机图形图像领域。后来人们发现，GPU非常适合并行计算，可以加速现代科学计算，GPU也因此不再局限于游戏和视频领域。
+
+无论是CPU还是GPU，在进行计算时，都需要用核心（Core）来做算术逻辑运算，比如加减乘与或非等。核心中有ALU（逻辑运算单元）和寄存器等电路。在进行计算时，一个核心只能顺序执行某项任务。不可能“吃着火锅唱着歌”，因为吃饭唱歌都占着嘴呢。所以为了同时并行地处理更多任务，芯片公司开发出了多核架构，只要相互之间没有依赖，每个核心做自己的事情，多核之间互不干扰，就可以达到并行计算的效果，极大缩短计算时间。
+
+<div align="center"><img src="./assets/计算机系统架构.jpg" width="70%"> </div>
+
+
+CPU和GPU是分开的，CPU和主存被称为**Host**，GPU被称为**Device**。CPU无法直接读取显存数据，GPU无法直接读取主存数据，主机与设备必须通过总线（Bus）相互通信
+
+<div align="center"><img src="./assets/CPU与GPU架构.png" width="70%"> </div>
+
+GPU核心在做计算时，只能直接**从显存中读写数据**，程序员需要在代码中指明哪些数据需要**从内存和显存之间相互拷贝**。这些数据**传输都是在总线**上，因此**总线的传输速度和带宽**成了部分计算任务的瓶颈。也因为这个瓶颈，很多计算任务并不适合放在GPU上，比如笔者这两年关注的推荐系统虽然也在使用深度学习，但因为输入是大规模稀疏特征，GPU加速获得的收益小于数据互相拷贝的时间损失。当前最新的总线技术是NVLink，IBM的Power CPU和英伟达的高端显卡可以通过NVLink直接通信。同时，单台机器上的多张英伟达显卡也可以使用NVLink相互通信，适合多GPU卡并行计算的场景。
+
+
+以上结构也被称为**异构计算**：使用CPU+GPU组合来加速计算。世界上顶尖的数据中心和超级计算机均采用了异构计算架构。例如超越天河2号成为世界第一的超级计算机Summit使用了9216个IBM POWER9 CPU和27648个英伟达Tesla GPU。
+
+在英伟达的设计里，多个小核心组成一个Streaming Multiprocessor（SM），一张GPU卡有多个SM。从“multiprocessor”这个名字上也可以看出SM包含了多个处理器。实际上，英伟达主要以SM为运算和调度的基本单元。上图为当前计算力最强的显卡Tesla V100，密密麻麻的绿色小格子就是GPU小核心，多个小核心一起组成了一个SM。
+
+- SM
+    - 针对不同计算的小核心（绿色小格子），包括优化深度学习的TENSOR CORE，32个64位浮点核心（FP64），64个整型核心(INT)，64个32位浮点核心(FP32)
+    - 计算核心直接从寄存器（Register）中读写数据
+    - 调度和分发器（Scheduler和Dispatch Unit）
+    - L0和L1级缓存
+
+#### 3.7.2 Cuda 编程
+
+- CPU执行顺序
+    - 初始化
+    - CPU计算
+    - 得到计算结果
+
+<div align="center"><img src="./assets/CPU执行顺序.jpg" width="70%"> </div>
+
+- GPU执行顺序
+    - 初始化，并将必要的数据拷贝到GPU设备的显存上
+    - CPU调用GPU函数，启动GPU多个核心同时进行计算
+    - CPU与GPU异步计算
+    - 将GPU计算结果拷贝回主机端，得到计算结果
+
+<div align="center"><img src="./assets/GPU执行顺序.jpg" width="70%"> </div>
+
+```py
+from numba import cuda
+
+def cpu_print():
+    print("print by cpu.")
+
+@cuda.jit
+def gpu_print():
+    # GPU核函数
+    print("print by gpu.")
+
+def main():
+    gpu_print[1, 2]()
+    cuda.synchronize()
+    cpu_print()
+
+if __name__ == "__main__":
+    main()
+```
+
+```py
+# 输出结果
+print by gpu.
+print by gpu.
+print by cpu.
+```
+
+- 使用 `from numba import cuda` 引入 `cuda` 库
+- 在 GPU 函数上添加 `@cuda.jit` 装饰符，表示该函数是一个在GPU设备上运行的函数，GPU函数又被称为**核函数**。
+- 主函数调用GPU核函数时，需要添加如 `[1, 2]` 这样的执行配置，这个配置是在告知GPU以多大的并行粒度同时进行计算。`gpu_print[1, 2]()` 表示同时开启2个线程并行地执行 `gpu_print` 函数，函数将被并行地执行2次。下文会深入探讨如何设置执行配置。
+- GPU核函数的启动方式是**异步**的：启动GPU函数后，CPU不会等待GPU函数执行完毕才执行下一行代码。必要时，需要调用 `cuda.synchronize()`，告知CPU等待GPU执行完核函数后，再进行CPU端后续计算。这个过程被称为**同步**，也就是GPU执行流程图中的红线部分。如果不调用 `cuda.synchronize()` 函数，执行结果也将改变，"print by cpu.将先被打印。虽然GPU函数在前，但是程序并没有等待GPU函数执行完，而是继续执行后面的 `cpu_print` 函数，由于CPU调用GPU有一定的延迟，反而后面的 `cpu_print` 先被执行，因此 `cpu_print` 的结果先被打印了出来。
+
+**Thread层次结构**
+
+前面的程序中，核函数被GPU并行地执行了2次。在进行GPU并行编程时需要定义执行配置来告知以怎样的方式去并行计算，比如上面打印的例子中，是并行地执行2次，还是8次，还是并行地执行20万次，或者2000万次。2000万的数字太大，远远多于GPU的核心数，如何将2000万次计算合理分配到所有GPU核心上。解决这些问题就需要弄明白CUDA的Thread层次结构。
+
+<div align="center"><img src="./assets/Thread层次结构.jpg" width="70%"> </div>
+
+CUDA将核函数所定义的运算称为**线程（Thread）**，多个线程组成一个**块（Block）**，多个块组成**网格（Grid）**。这样一个grid可以定义成千上万个线程，也就解决了并行执行上万次操作的问题。例如，把前面的程序改为并行执行8次：可以用2个block，每个block中有4个thread。原来的代码可以改为`gpu_print[2, 4]()`，其中方括号中第一个数字表示整个grid有多少个block，方括号中第二个数字表示一个block有多少个thread。
+
+CUDA提供了一系列内置变量，以记录thread和block的大小及索引下标。以`[2, 4]`这样的配置为例：`blockDim.x` 变量表示block的大小是4，即每个block有4个thread，`threadIdx.x` 变量是一个从0到 `blockDim.x - 1`（4-1=3）的索引下标，记录这是第几个thread；`gridDim.x` 变量表示grid的大小是2，即每个grid有2个block，`blockIdx.x` 变量是一个从0到 `gridDim.x - 1`（2-1=1）的索引下标，记录这是第几个block。
+
+<div align="center"><img src="./assets/CUDA内置变量.jpg" width="70%"> </div>
+
+某个thread在整个grid中的位置编号为：`threadIdx.x + blockIdx.x * blockDim.x`
+
+利用上述变量，我们可以把之前的代码丰富一下:
+
+```py
+from numba import cuda
+
+def cpu_print(N):
+    for i in range(0, N):
+        print(i)
+
+@cuda.jit
+def gpu_print(N):
+    idx = cuda.threadIdx.x + cuda.blockIdx.x * cuda.blockDim.x 
+    if (idx < N):
+        print(idx)
+
+def main():
+    print("gpu print:")
+    gpu_print[2, 4](8)
+    cuda.synchronize()
+    print("cpu print:")
+    cpu_print(8)
+
+if __name__ == "__main__":
+    main()
+```
+
+这里的GPU函数在每个CUDA thread中打印了当前thread的编号，起到了CPU函数for循环同样的作用。因为for循环中的计算内容互相不依赖，也就是说，某次循环只是专心做自己的事情，循环第i次不影响循环第j次的计算，所以这样互相不依赖的for循环非常适合放到CUDA thread里做并行计算。在实际使用中，我们一般将CPU代码中互相不依赖的的for循环适当替换成CUDA代码。
+
+这份代码打印了8个数字，核函数有一个参数N，N = 8，假如我们只想打印5个数字呢？当前的执行配置共2 * 4 = 8个线程，线程数8与要执行的次数5不匹配，不过我们已经在代码里写好了if (idx < N)的判断语句，判断会帮我们过滤不需要的计算。我们只需要把N = 5传递给gpu_print函数中就好，CUDA仍然会启动8个thread，但是大于等于N的thread不进行计算。**注意，当线程数与计算次数不一致时，一定要使用这样的判断语句，以保证某个线程的计算不会影响其他线程的数据。**
