--- a/interview/深度学习常用领域.md
+++ b/interview/深度学习常用领域.md
@@ -441,6 +441,17 @@ class CBAM(nn.Module):
 ## 2.5 Transformer
 
 [图解Transformer](https://cloud.tencent.com/developer/article/1745002)
+[transformer的细节到底是怎么样的？](https://www.zhihu.com/question/362131975)
+
+模型思想：Transformer中抛弃了传统的CNN和RNN，整个网络结构完全是由Attention机制组成。 作者采用Attention机制的原因是RNN（或者LSTM，GRU等）的计算是顺序的，RNN相关算法只能从左向右依次计算或者从右向左依次计算，这种机制带来了两个问题:
+
+1. 时间片 t 的计算依赖 t−1 时刻的计算结果，这样限制了模型的并行能力；
+2. 顺序计算的过程中信息会丢失，尽管LSTM等门机制的结构一定程度上缓解了长期依赖的问题，**但是对于特别长期的依赖现象，LSTM依旧无能为力。**
+
+Transformer的提出解决了上面两个问题：
+
+1. 首先它使用了Attention机制，将序列中的任意两个位置之间的距离是缩小为一个常量。
+2. 其次它不是类似RNN的顺序结构，因此具有更好的并行性，符合现有的GPU框架。
 
 <div align="center"><img src="./assets/transformer model.png" width="70%"> </div>
 
@@ -476,6 +487,23 @@ $$Attention(Q, K, V) = softmax(\frac{QK^T}{\sqrt{d_k}})V$$
 将Q、K、V通过一个线性映射之后，分成 h 份，对每一份进行scaled dot-product attention效果更好。然后，把各个部分的结果合并起来，再次经过线性映射，得到最终的输出
 
 <div align="center"><img src="./assets/multihead attention.png" width="70%"> </div>
+
+
+**Transformer比CNN好在哪**
+
+- `Data scale`
+计算机视觉发展遇到data scale的瓶颈
+CNN很多模型适用于监督性学习，CNN对海量数据的适配能力没有想象中的要好
+Transformer对大数据的适配能力很好，可以明显地看到随着数据量的增加，模型的表现越来越好
+- `Static and Dynamic`
+CNN很多学习的参数的静态参数，学完就fixed不动了
+Transformer每个参数是可以动态的(Dynamic)
+- `Interest point and Attention`
+    - interest point可以学到哪些点是更突出的，更有表达力的
+    - attention更关注feature彼此之间的相互关系
+    - CNN可以通过级联的关系学习到不同scale上的template，也就是interest point
+    - Transformer学到的更多是attention学到的feature彼此之间的相互关系，普适性更好，不完全依赖于数据本身；关注的不仅仅是local信息，有一个从local到global这样的一个扩散的机制去寻找表达
+- `Interest point + Attention`
 
 ## 2.6 GAN
 
@@ -707,6 +735,11 @@ $\mu$ 是**平移参数**（shift parameter），$\sigma$ 是**缩放参数**（
 **Normalization 的权重伸缩不变性**
 
 权重伸缩不变性（weight scale invariance）指的是，当权重  按照常量  进行伸缩时，得到的规范化后的值保持不变。权重伸缩不变性可以有效地提高反向传播的效率。权重伸缩不变性还具有参数正则化的效果，可以使用更高的学习率。数据伸缩不变性可以有效地减少梯度弥散，简化对学习率的选择。
+
+
+### 3.4.4 BN的推断(inference)过程
+
+BN训练完成之后，模型的参数 $\theta$、$\gamma$ 和 $\beta$ 最终就固定下来，当来一个测试样本进行预测（推断）时，我们只需要带入固定的参数，根据BN前向传播的公式进行BN就可以了。但是要注意的是：在推断阶段，对均值和方差的求解不再和训练阶段时的求法一样。这里的均值和方差是根据训练过程中每一次batch得到的均值和方差求解得到的，即求每一个batch的均值和方差的期望的无偏估计。
 
 ### 3.5 激活函数
 
