--- a/interview/0面试过程.md
+++ b/interview/0面试过程.md
@@ -1,3 +1,27 @@
+# 2022.09.23
+## 传音控股 一面凉经
+
+- Python 方面
+1.	Python内置函数区别和用法
+2.	数组，元组，列表，字典等用法
+3.	内存管理机制
+4.	了解过CPython吗
+5.	遇到过内存溢出怎么分析问题
+- 数据库方面
+1.	关系型数据库MySQL有哪些索引，有什么区别？
+
+- 操作系统方面
+1.	进程通信方式
+2.	线程通信方式
+3.	锁的问题
+
+- 计算机网络方面
+1.	TCP里如何保证数据流传输接收正确
+
+- 其他方面
+如何保证代码规范与整洁
+
+
 # 2022.03.04
 
 ## 开域集团
