--- a/interview/0面试过程.md
+++ b/interview/0面试过程.md
@@ -4,9 +4,10 @@
 - Python 方面
 1.	Python内置函数区别和用法
 2.	数组，元组，列表，字典等用法
-3.	内存管理机制
-4.	了解过CPython吗
-5.	遇到过内存溢出怎么分析问题
+3.  int 有什么区别
+4.	内存管理机制，如何扩展
+5.	了解过CPython吗
+6.	遇到过内存溢出怎么分析问题
 - 数据库方面
 1.	关系型数据库MySQL有哪些索引，有什么区别？
 
