--- a/interview/深度学习常用领域.md
+++ b/interview/深度学习常用领域.md
@@ -442,6 +442,7 @@ class CBAM(nn.Module):
 
 [图解Transformer](https://cloud.tencent.com/developer/article/1745002)
 [transformer的细节到底是怎么样的？](https://www.zhihu.com/question/362131975)
+[Transformer相关问题总结](https://zhuanlan.zhihu.com/p/554814230)
 
 模型思想：Transformer中抛弃了传统的CNN和RNN，整个网络结构完全是由Attention机制组成。 作者采用Attention机制的原因是RNN（或者LSTM，GRU等）的计算是顺序的，RNN相关算法只能从左向右依次计算或者从右向左依次计算，这种机制带来了两个问题:
 
