--- a/interview/0面试过程.md
+++ b/interview/0面试过程.md
@@ -1,3 +1,22 @@
+# 2022.09.26
+## 中兴 一面
+
+1. 自我介绍
+2. 说一下爬虫实习生做的项目
+3. redis （用了什么结构，做什么用，为什么快，底层原理，哪些结构）
+4. mysql 去重怎么去重，每次搜索一遍的话表太大查询会非常慢，有没有其他更好的方式
+5. pdf获取怎么获取的，如果pdf加密呢
+6. 使用了什么加密方式发送文件，为什么用这种呢，什么是AES加密，对称加密和非对称加密
+7. 了解一些协议吗？说一下TCP和UDP协议的区别
+8. 了解http协议吗，有几个版本，https协议有什么区别
+9. 了解非关系型数据库吗
+10. 进程间通信方式
+11. 介绍一下你的科研项目吧（面试官不太理解就没细问），问了数据预处理
+12. 使用了Kafka什么接口呢（我说我不常用，就说了生产者和消费者）
+13. Python常用哪些库呢，比如数据处理的时候
+14. 代码量怎么样
+15. 有意向的部门吗（然后我就问他问题了）
+
 # 2022.09.23
 ## 传音控股 一面凉经
 
