--- a/interview/排序算法.md
+++ b/interview/排序算法.md
@@ -1,3 +1,15 @@
+- [概述](#1-概述)
+    - [分类](#11-分类)
+    - [复杂度及稳定性](#12-复杂度及稳定性)
+- [排序算法](#2-排序算法)
+    - [冒泡排序](#21-冒泡排序-bubble-sort)
+    - [选择排序](#22-选择排序-selection-sort)
+    - [快速排序](#23-快速排序-quick-sort)
+    - [插入排序](#24-插入排序)
+    - [希尔排序](#25-希尔排序-shell-sort)
+    - [归并排序](#26-归并排序-merge-sort)
+    - [堆排序](#27-堆排序)
+
 # 1. 概述
 
 ## 1.1 分类
