--- a/interview/操作系统.md
+++ b/interview/操作系统.md
@@ -1,6 +1,14 @@
 # 操作系统
 
-
+- [进程调度算法](#1-进程调度算法)
+    - [先来先服务](#11-先来先服务fcfs-first-come-first-served)
+    - [短作业优先](#12-短作业优先sjf-shortest-job-first)
+    - [高响应比优先](#13-高响应比优先hrrn-highest-response-ratio-next)
+    - [优先级调度](#14-优先级调度psa-priority-scheduling-algorithm)
+    - [时间片轮转调度](#15-时间片轮转调度rr-round-robin)
+    - [多级反馈队列调度](#16-多级反馈队列调度mfq-multileveled-feedback-queue)
+- [进程协作](#2-进程协作)
+    - [进程通信](#21-进程通信)
 ## 1. 进程调度算法
 
 ### 1.1 先来先服务(FCFS, First Come First Served)
