--- a/interview/数据库.md
+++ b/interview/数据库.md
@@ -1,3 +1,31 @@
+- [事务](#1-mysql事务解析-acid的原理及实现)
+    - [什么是事务](#11-什么是事务)
+    - [事务是如何通过日志来实现的](#12-事务是如何通过日志来实现的)
+    - [acid](#13-acid)
+    - [事务的并发问题](#14-事务的并发问题)
+    - [事务的隔离级别](#15-事务的隔离级别)
+- [底层原理-b树](#2-底层原理-b树)
+    - [b树和b树的区别](#21-b树和b树的区别)
+    - [为什么说b比b树更适合实际应用中操作系统的文件索引和数据库索引](#22-为什么说b比b树更适合实际应用中操作系统的文件索引和数据库索引)
+    - [为什么b树内部节点不存数据](#23-为什么b树内部节点不存数据)
+- [数据库中的锁](#3-数据库中的锁)
+    - [乐观锁和悲观锁](#31-乐观锁和悲观锁是什么)
+    - [mysql有哪些锁](#32-mysql有哪些锁)
+- [索引](#4-基础概念)
+    - [基本的索引类型](#41-mysql数据库几个基本的索引类型)
+    - [普通索引唯一索引主键索引联合索引全文索引](#411-普通索引唯一索引主键索引联合索引全文索引)
+    - [聚集索引和非聚集索引](#412-聚集索引和非聚集索引的区别)
+    - [使用索引查询一定能提高查询的性能吗为什么](#42-使用索引查询一定能提高查询的性能吗为什么)
+    - [数据库中索引失效的原因是什么](#45-数据库中索引失效的原因是什么)
+    - [数据库三大范式](#43-数据库三大范式)
+- [存储引擎](#5-存储引擎)
+    - [mysql有哪些存储引擎](#51-mysql有哪些存储引擎)
+
+- [非关系型数据库和关系型数据库区别优势比较](#1-非关系型数据库和关系型数据库区别优势比较)
+    - [使用redis有什么缺点](#42-使用redis有什么缺点)
+    - [单线程的redis为什么这么快](#43-单线程的redis为什么这么快)
+- [mongodb, mysql的区别](#2-mongodbmysql的区别)
+
 # MySQL
 
 ## 1. MySQL事务解析: ACID的原理及实现
