--- a/interview/0面试过程.md
+++ b/interview/0面试过程.md
@@ -14,8 +14,9 @@
 11. 介绍一下你的科研项目吧（面试官不太理解就没细问），问了数据预处理
 12. 使用了Kafka什么接口呢（我说我不常用，就说了生产者和消费者）
 13. Python常用哪些库呢，比如数据处理的时候
-14. 代码量怎么样
-15. 有意向的部门吗（然后我就问他问题了）
+14. 代码量怎么样，是面向对象还是面向过程
+15. 熟悉linux吗，常用哪些指令，你知道怎么杀死一个进程吗，为什么用-9，-1代表什么？为什么nohup能够保存下来日志
+16. 有意向的部门吗（然后我就问他问题了）
 
 # 2022.09.23
 ## 传音控股 一面凉经
