--- a/interview/深度学习常用领域.md
+++ b/interview/深度学习常用领域.md
@@ -1,6 +1,39 @@
+- [](#1-常用领域)
+    - [目标检测](#11-目标检测)
+        - [r-cnn](#111-r-cnn)
+        - [yolo系列](#112-yolo系列)
+    - [图像分割](#12-图像分割)
+        - [deeplab---语义分割](#121-deeplab---语义分割)
+        - [denseaspp](#1215-denseaspp)
+        - [bisenet 轻量级语义分割](#122-bisenet---轻量级语义分割)
+    - [知识蒸馏](#13-知识蒸馏)
+        - [知识蒸馏的具体方法](#1314-知识蒸馏的具体方法)
+- [常见网络](#2-常见网络)
+    - [resnet](#21-resnet)
+    - [mobilenet](#23-mobilenet)
+    - [attention](#24-attention)
+        - [空间域注意力方法](#241-空间域注意力方法)
+            - [self-attention](#2411-自注意力-self-attention)
+            - [non-local-attention](#2412-非局部注意力-non-local-attention)
+        - [通道域注意力方法](#242-通道域注意力方法)
+            - [senet](#2421-senet)
+            - [sknet](#2422-sknet)
+        - [混合域注意力方法](#243-混合域注意力方法)
+            - [cbam](#2431-cbam)
+    - [transformer](#25-transformer)
+    - [gan](#26-gan)
+    - [vit](#27-vit)
+- [常用方法](#3-常用方法)
+    - [参数初始化](#31-参数初始化)
+    - [优化算法](#32-优化算法)
+    - [卷积方式](#33-卷积方式)
+    - [激活函数](#35-激活函数)
+    - [bn, ln, in, gn](#34-bnlningn)
+    - [样本不均衡](#36-样本不均衡)
+    - [gpu加速](#37-gpu加速)
+
+    
 # 1. 常用领域
-
-
 
 ## 1.1 目标检测
 
