--- a/interview/深度学习常用领域.md
+++ b/interview/深度学习常用领域.md
@@ -1,4 +1,4 @@
-- [](#1-常用领域)
+- [常用领域](#1-常用领域)
     - [目标检测](#11-目标检测)
         - [r-cnn](#111-r-cnn)
         - [yolo系列](#112-yolo系列)
@@ -32,7 +32,7 @@
     - [样本不均衡](#36-样本不均衡)
     - [gpu加速](#37-gpu加速)
 
-    
+
 # 1. 常用领域
 
 ## 1.1 目标检测
