--- a/interview/计算机网络.md
+++ b/interview/计算机网络.md
@@ -72,7 +72,15 @@
 5. 每一条TCP连接只能是点到点的；UDP支持一对一、一对多、多对一和多对多的通信方式。
 6. TCP首部开销20字节；UDP的首部开销小，只有8个字节。
 
-`TCP 拥塞控制` 包含四部分内容：`慢启动、拥塞避免、快速重传、快速恢复。`
+### 3.3 TCP 拥塞控制
+
+- [TCP的拥塞控制（详解）](https://blog.csdn.net/qq_41431406/article/details/97926927)
+
+`TCP 拥塞控制` 包含四部分内容：`慢启动、拥塞避免、快速重传、快速恢复。` 
+
+
+- 慢开始：假设当前发送方拥塞窗口cwnd的值为1，而发送窗口swnd等于拥塞窗口cwnd，因此发送方当前只能发送一个数据报文段（拥塞窗口cwnd的值是几，就能发送几个数据报文段），接收方收到该数据报文段后，给发送方回复一个确认报文段，发送方收到该确认报文后，将拥塞窗口的值变为2，
+- 拥塞避免
 
 ## 4. HTTP
 
