--- a/interview/深度学习常用领域.md
+++ b/interview/深度学习常用领域.md
@@ -313,6 +313,10 @@ $$q_i= \frac{exp(z_i / T)}{\sum_{j}exp(z_j / T)}$$
 
 在统计学中，残差和误差是非常容易混淆的两个概念。误差是衡量观测值和真实值之间的差距，残差是指预测值和观测值之间的差距。对于残差网络的命名原因，作者给出的解释是，网络的一层通常可以看做 $y=H(x)$，而残差网络的一个残差块可以表示为 $H(x)=F(x)+x$，也就是 $F(x)=H(x)-x$，在单位映射中， $y=x$ 便是观测值，而 $H(x)$ 是预测值，所以 $F(x)$ 便对应着残差，因此叫做残差网络。
 
+- 优势
+    - 残差网络中不会出现梯度消失的问题
+    - $L$ 层的梯度可以直接传递到任何一个比它浅的 $l$ 层（ $L$ 层可以表示为任意一个比它浅的 $l$ 层和他们之间的残差部分之和）
+    
 ## 2.1 ResNeXt
 
 引入 [组卷积](#331-group-convolution)
